<resources>
    <string name="app_name">오늘의 일정</string>
    <string name="slding_root_nav_ex1">sr_ex1</string>
    <string name="slding_root_nav_ex2">sr_ex2</string>
    <string name="slding_root_nav_ex3">sr_ex3</string>

    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>

    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>

    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_excersixe_diary">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_afterwmusle">string_afterwmusle</string>
    <string name="afterfat">afterfat</string>
    <string name="afterhip">afterhip</string>
    <string name="afterwaist">afterwaist</string>
    <string name="photo">photo</string>
    <string name="afterchest">afterchest</string>
    <string name="afterweight">afterweight</string>
    <string name="todo">todo</string>
    <string name="weight">weight</string>
    <string name="before_muscle">before_muscle</string>
    <string name="chest">chest</string>
    <string name="to">to</string>
    <string name="before_hip">before_hip</string>
    <string name="efore_waist">efore_waist</string>
    <string name="to">to</string>
    <string name="to">to</string>
    <string name="before_waist">before_waist</string>
    <string name="before_fat">before_fat</string>
    <string name="before_chest">before_chest</string>
    <string name="before_weight">before_weight</string>
    <string name="todo">todo</string>
    <string name="waist">waist</string>
    <string name="muscle">muscle</string>
    <string name="fat">fat</string>
    <string name="hip">hip</string>
</resources>